# onigiri

./: Cargo.toml  README.md  build_icon.sh
resources/: Onigiri.icns
src/: main.rs
